# Nex

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/components/: mod.rs
src/components/configuration/: config_creator.rs  config_deleter.rs  configuration.rs  mod.rs
src/components/launcher/: backend.rs  game.rs  launcher.rs  mod.rs
src/components/settings/: backend.rs  client.rs  gameserver.rs  mod.rs  redirect.rs  settings.rs
src/structs/: configuration.rs  mod.rs  settings.rs
src/utils/: actions.rs  configuration.rs  mod.rs  proxy.rs  settings.rs
