[package]
name = "nex"
version = "0.1.1"
edition = "2024"

[dependencies]
colored = "3.1.1"
crossterm = "0.29.0"
figlet-rs = "0.1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "4.0"
regex = "1.10"
url = "2.5.8"
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_System_WindowsProgramming", "Win32_System_Memory", "Win32_System_Diagnostics_Debug", "Win32_System_LibraryLoader", "Win32_System_Diagnostics_ToolHelp"] }
sysinfo = "0.38.4"
tokio = { version = "1", features = ["full"] }
once_cell = "1"
